--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
+    "bootstrap3": "^3.3.5",
+    "reveal.js": "3.6.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "reveal.js": "3.6.0"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
