--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "bootstrap3": "^3.3.5",
     "reveal.js": "3.6.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "vee-validate": "^2.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
