--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^3.8.95",
     "bootstrap3": "^3.3.5",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
