--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^3.8.95",
+    "material-design-icons-iconfont": "^5.0.1",
     "bootstrap3": "^3.3.5",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
+    "css-loader": "^3.2.0",
     "vue-cli-plugin-vuetify": "^0.6.1",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.2.2"
